clang/test/BSC/Negative/SafeZone/unsafe_param_or_return_type/unsafe_param_or_return_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

safe int* funa(int *a);

safe int* funa(int *a) {
  return a;
}

safe int* (*p)(int *a);

safe int funb(int arr[10]) {
  return 10;
}

union data {
  int a;
  char b;
};

safe union data func(union data a) { 
  return a;                         
}

struct SA {
  int a;
};

safe struct SA fund(struct SA f) {
  return f;
}

safe struct SA fund1(struct SA *owned fp) {
  return *fp;
}// expected-error {{memory leak of value: `fp`}}

safe struct SA fund2(struct SA *borrow fp) {
  return *fp;
}

struct SB {
  int *a;
};

safe struct SB fune(struct SB f) {
  return f;
}

struct SC {
  union data a;
};

safe struct SC funf(struct SC f) {  
  return f;                      
}

struct SD {
  int arr[10];
};

safe struct SD fung(struct SD f) {
  return f;
}

struct SE {
  int (*arr)[10];
};

safe struct SE funh(struct SE f) {
  return f;
}

struct SF {
  int *arr[10];
};

safe struct SF funi(struct SF f) {
  return f;
}

safe int* owned funj(int* owned a) {
  return a;
}

struct SG {
  int* owned a;
};

safe struct SG funk(struct SG f) {
  return f;
}